{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 113,
  "lineage": "fdf5a9eb-081b-de78-612f-9a6ce92baaad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-8246870c15a48c3b9",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-8246870c15a48c3b9",
            "association_id": "eipassoc-88167441ed45a3a8f",
            "domain": "vpc",
            "id": "eipalloc-8246870c15a48c3b9",
            "network_interface": "eni-1db9dfc2ab13037c3",
            "private_dns": "ip-10-151-145-162.ec2.internal",
            "private_ip": "10.151.145.162",
            "public_dns": "ec2-127-141-221-95.compute-1.amazonaws.com",
            "public_ip": "127.141.221.95",
            "tags": {
              "Name": "NAT EIP"
            },
            "tags_all": {
              "Name": "NAT EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-12345678",
            "arn": "arn:aws:ec2:us-east-1::instance/i-6efee30d09cfac945",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-6efee30d09cfac945",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "your-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-208da2f305023e603",
            "private_dns": "ip-10-0-2-4.ec2.internal",
            "private_ip": "10.0.2.4",
            "public_dns": "None",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-6a660312d70a9e81d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0ec621e81ca59fa",
            "tags": {
              "Name": "PrivateEC2"
            },
            "tags_all": {
              "Name": "PrivateEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-1b65827a6ab62446a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.private_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-12345678",
            "arn": "arn:aws:ec2:us-east-1::instance/i-bbbe2fa13737adf0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-bbbe2fa13737adf0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "your-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-7008681972b2c29b3",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-54-214-183-21.compute-1.amazonaws.com",
            "public_ip": "54.214.183.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-78391201ba4c06578",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6a328267701596e32",
            "tags": {
              "Name": "PublicBastionEC2"
            },
            "tags_all": {
              "Name": "PublicBastionEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-76630b39d721a0cfc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-687ee30bdd166409a",
            "id": "igw-687ee30bdd166409a",
            "owner_id": "000000000000",
            "tags": {
              "Name": "my-vpc-igw"
            },
            "tags_all": {
              "Name": "my-vpc-igw"
            },
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-8246870c15a48c3b9",
            "association_id": "eipassoc-88167441ed45a3a8f",
            "connectivity_type": "public",
            "id": "nat-70d007ed6cbcf46c5",
            "network_interface_id": "eni-1db9dfc2ab13037c3",
            "private_ip": "10.151.145.162",
            "public_ip": "127.141.221.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-6a328267701596e32",
            "tags": {
              "Name": "Main NAT Gateway"
            },
            "tags_all": {
              "Name": "Main NAT Gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-acl/acl-2f326bd8d4ced27ef",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-2f326bd8d4ced27ef",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "000000000000",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL"
            },
            "tags_all": {
              "Name": "PrivateNACL"
            },
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:network-acl/acl-9b939b91cbaefda45",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-9b939b91cbaefda45",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "000000000000",
            "subnet_ids": [],
            "tags": {
              "Name": "PublicNACL"
            },
            "tags_all": {
              "Name": "PublicNACL"
            },
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-72967475853fe7db4",
            "network_acl_id": "acl-2f326bd8d4ced27ef",
            "subnet_id": "subnet-0f0ec621e81ca59fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private_nacl",
            "aws_subnet.private_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-9f0f94b5e4bdf797a",
            "network_acl_id": "acl-9b939b91cbaefda45",
            "subnet_id": "subnet-6a328267701596e32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-7370ca88b6f924d711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-70d007ed6cbcf46c5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-7370ca88b6f924d71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-687ee30bdd166409a",
            "id": "r-rtb-7bcfaef6847bdd9a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-7bcfaef6847bdd9a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_route_table",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-7370ca88b6f924d71",
            "id": "rtb-7370ca88b6f924d71",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-70d007ed6cbcf46c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "my-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-7bcfaef6847bdd9a3",
            "id": "rtb-7bcfaef6847bdd9a3",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-687ee30bdd166409a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "my-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-18955efb8452a994f",
            "route_table_id": "rtb-7370ca88b6f924d71",
            "subnet_id": "subnet-0f0ec621e81ca59fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-2e5c84295050937c8",
            "route_table_id": "rtb-7bcfaef6847bdd9a3",
            "subnet_id": "subnet-6a328267701596e32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-76630b39d721a0cfc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-76630b39d721a0cfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250927135210222300000005",
            "name_prefix": "terraform-",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BastionSecurityGroup"
            },
            "tags_all": {
              "Name": "BastionSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-1b65827a6ab62446a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-1b65827a6ab62446a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-76630b39d721a0cfc"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250927135210906700000009",
            "name_prefix": "terraform-",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PrivateSecurityGroup"
            },
            "tags_all": {
              "Name": "PrivateSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-0f0ec621e81ca59fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0ec621e81ca59fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "my-vpc-private-subnet"
            },
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-6a328267701596e32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-6a328267701596e32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnet"
            },
            "vpc_id": "vpc-b7cf6abbe6aa464ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-b7cf6abbe6aa464ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-52f513864d08f37f6",
            "default_route_table_id": "rtb-4358fdae4cdb7616a",
            "default_security_group_id": "sg-78e5a6b69312439f5",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-b7cf6abbe6aa464ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-4358fdae4cdb7616a",
            "owner_id": "000000000000",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}